--- a/tools/alley/Makefile.in
+++ b/tools/alley/Makefile.in
@@ -1,3 +1,4 @@
 BINARIES += alley
-alley_SOURCES += ExecutorMain.cpp
+alley_SOURCES += ExecutorMain.cpp \
+								 ImageExecutor.cpp
 alley_LIBRARIES += archive-rw
