Add "wllvm-extract" tool, similar to extract-bc.
Doesn't write the resulting linked bitcode yet.

--- a/tools/wllvm/Makefile.in
+++ b/tools/wllvm/Makefile.in
@@ -1,2 +1,3 @@
-BINARIES += wllvm-dump
+BINARIES += wllvm-dump wllvm-extract
 wllvm-dump_SOURCES += wllvm-dump.cpp WLLVMFile.cpp
+wllvm-extract_SOURCES += wllvm-extract.cpp WLLVMFile.cpp
