alley: Add ability to run bc 'hosted' on libnone (musl).

--- a/tools/alley/Makefile.in
+++ b/tools/alley/Makefile.in
@@ -1,4 +1,5 @@
 BINARIES += alley
 alley_SOURCES += ExecutorMain.cpp \
-								 ImageExecutor.cpp
+								 ImageExecutor.cpp \
+								 HostedImageExecutor.cpp
 alley_LIBRARIES += archive-rw
