Add ObjectCache to alley, mostly using LLIObjectCache's impl.

--- a/tools/alley/Makefile.in
+++ b/tools/alley/Makefile.in
@@ -1,5 +1,6 @@
 BINARIES += alley
 alley_SOURCES += ExecutorMain.cpp \
 								 ImageExecutor.cpp \
-								 HostedImageExecutor.cpp
+								 HostedImageExecutor.cpp \
+								 ImageCache.cpp
 alley_LIBRARIES += archive-rw
