--- a/libs/none/Makefile.in
+++ b/libs/none/Makefile.in
@@ -1,24 +1,27 @@
 
-libs:: prefix/lib/libnone.a
+none_srcdir := $(srcdir)
+none_objdir := $(objdir)
 
-none_srcdir := $(srcdir)/
-none_objdir := $(objdir)/
+prefix := $(topsrcdir)/prefix
+
+libs:: $(prefix)/lib/libnone.a
+
 
 NONE_ASM_FILES = UnwindRegistersRestore.S UnwindRegistersSave.S
-NONE_ASM := $(addprefix $(none_srcdir),$(NONE_ASM_FILES))
-NONE_OBJS := $(addprefix $(none_objdir),$(NONE_ASM_FILES:.S=.o))
+NONE_ASM := $(addprefix $(none_srcdir)/,$(NONE_ASM_FILES))
+NONE_OBJS := $(addprefix $(none_objdir)/,$(NONE_ASM_FILES:.S=.o))
 
-%.o: %.S assembly.h
+$(none_objdir)/%.o: $(none_srcdir)/%.S $(none_srcdir)/assembly.h
 	$(CC) $< -c -o $@ $(CFLAGS)
 
 # Take existing musl libc.a and add our little libunwind bits.
-prefix/lib/libnone.a: $(none_objdir)/musl-libc.a $(NONE_OBJS)
+$(prefix)/lib/libnone.a: $(none_objdir)/musl-libc.a $(NONE_OBJS)
 	cp $< $@.tmp
 	ar rs $@.tmp $(NONE_OBJS)
 	mv $@.tmp $@
 
 clean::
-	rm -rf prefix/lib/libnone.a $(NONE_OBJS)
+	rm -rf $(prefix)/lib/libnone.a $(NONE_OBJS)
 
 MUSL := musl-1.1.15
 
