--- a/libs/none/Makefile.in
+++ b/libs/none/Makefile.in
@@ -2,9 +2,7 @@
 none_srcdir := $(srcdir)
 none_objdir := $(objdir)
 
-prefix := $(topsrcdir)/prefix
-
-libs:: $(prefix)/lib/libnone.a
+libs:: prefix/lib/libnone.a
 
 
 NONE_ASM_FILES = UnwindRegistersRestore.S UnwindRegistersSave.S
@@ -15,13 +13,13 @@ $(none_objdir)/%.o: $(none_srcdir)/%.S $(none_srcdir)/assembly.h
 	$(CC) $< -c -o $@ $(CFLAGS)
 
 # Take existing musl libc.a and add our little libunwind bits.
-$(prefix)/lib/libnone.a: $(none_objdir)/musl-libc.a $(NONE_OBJS) | prefix/lib/.mkdir.done
+prefix/lib/libnone.a: $(none_objdir)/musl-libc.a $(NONE_OBJS) | prefix/lib/.mkdir.done
 	cp $< $@.tmp
 	ar rs $@.tmp $(NONE_OBJS)
 	mv $@.tmp $@
 
 clean::
-	rm -rf $(prefix)/lib/libnone.a $(NONE_OBJS)
+	rm -rf prefix/lib/libnone.a $(NONE_OBJS)
 
 MUSL := musl-1.1.15
 
