Add 'all2bc' tool, which generates single bitcode from allexe files.
By leveraging 'legacy' LTOCodeGenerator, this process is much
easier than using Linker and making things work as expected.

--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -3,4 +3,6 @@ prefix/bin/bc2allvm: $(srcdir)/bc2allvm prefix/bin/.mkdir.done
 
 libs:: prefix/bin/bc2allvm
 
-DIRS += alley wllvm
+DIRS += alley \
+        all2bc \
+        wllvm
