all2bc -> alltogether, now outputs an allexe!

--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -4,5 +4,5 @@ prefix/bin/bc2allvm: $(srcdir)/bc2allvm prefix/bin/.mkdir.done
 libs:: prefix/bin/bc2allvm
 
 DIRS += alley \
-        all2bc \
+        alltogether \
         wllvm
