--- a/tools/alley/Makefile.in
+++ b/tools/alley/Makefile.in
@@ -3,4 +3,4 @@ alley_SOURCES += ExecutorMain.cpp \
 								 ImageExecutor.cpp \
 								 HostedImageExecutor.cpp \
 								 ImageCache.cpp
-alley_LIBRARIES += archive-rw
+alley_LIBRARIES += allvm
