Static code generation library.

--- a/tools/alley/Makefile.in
+++ b/tools/alley/Makefile.in
@@ -3,4 +3,4 @@ alley_SOURCES += ExecutorMain.cpp \
 								 ImageExecutor.cpp \
 								 HostedImageExecutor.cpp \
 								 ImageCache.cpp
-alley_LIBRARIES += all
+alley_LIBRARIES += all StaticCodeGen
