--- a/tools/wllvm/Makefile.in
+++ b/tools/wllvm/Makefile.in
@@ -1,3 +1,5 @@
 BINARIES += wllvm-dump wllvm-extract
-wllvm-dump_SOURCES += wllvm-dump.cpp WLLVMFile.cpp
-wllvm-extract_SOURCES += wllvm-extract.cpp WLLVMFile.cpp
+wllvm-dump_SOURCES += wllvm-dump.cpp
+wllvm-dump_LIBRARIES += wllvm
+wllvm-extract_SOURCES += wllvm-extract.cpp
+wllvm-extract_LIBRARIES += wllvm
