--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -8,3 +8,4 @@ add_custom_command(
   COMMAND ${CMAKE_COMMAND} -E copy
           ${CMAKE_CURRENT_SOURCE_DIR}/bc2allvm
           ${CMAKE_CURRENT_BINARY_DIR}/bc2allvm)
+set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES bc2allvm)
