--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -1,5 +1,3 @@
-# TODO: this file needs cleanup; the escaping is pretty horrible
-
 enable_language(ASM)
 
 set(MUSL musl-1.1.15)
@@ -14,7 +12,7 @@ set(MUSL_PATCHES
 add_custom_command(OUTPUT ${MUSL}/config.mak
   COMMAND rm -rf "${MUSL}"
   COMMAND tar xf "${CMAKE_CURRENT_SOURCE_DIR}/${MUSL}.tar.gz"
-  COMMAND for PATCH in ${MUSL_PATCHES}\; do patch -p1 -d "${MUSL}" -i "${CMAKE_CURRENT_SOURCE_DIR}/$$PATCH" \; done
+  COMMAND for PATCH in ${MUSL_PATCHES} \; do patch -p1 -d "${MUSL}" -i "${CMAKE_CURRENT_SOURCE_DIR}/$$PATCH" \; done
   COMMAND cd ${MUSL} && CC=${CMAKE_C_COMPILER} ./configure --disable-shared
   MAIN_DEPENDENCY ${MUSL}.tar.gz
   DEPENDS ${MUSL_PATCHES}
@@ -31,10 +29,10 @@ set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${MUSL}")
 # Compile our little libunwind bits into a library, then merge in musl's libc.a.
 add_library(none STATIC UnwindRegistersRestore.S UnwindRegistersSave.S)
 add_dependencies(none musl)
+# http://stackoverflow.com/questions/3821916/how-to-merge-two-ar-static-libraries-into-one
+configure_file(merge.ar merge.ar)
 add_custom_command(TARGET none POST_BUILD
-  COMMAND mv libnone.a libnone.a.tmp
-  # http://stackoverflow.com/questions/3821916/how-to-merge-two-ar-static-libraries-into-one
-  # Note triple escaping--CMake, Make, and echo.
-  COMMAND echo -e "create libnone.a\\\\naddlib libnone.a.tmp\\\\naddlib ${MUSL}/lib/libc.a\\\\nsave\\\\nend" | ar -M
-  COMMAND rm libnone.a.tmp
+  COMMAND ar -M <merge.ar
+  COMMAND mv libnone.a.merged libnone.a
+  DEPENDS merge.ar
 )
