CMake: only use LLVM_DEFINITIONS when necessary

--- a/tools/alley/CMakeLists.txt
+++ b/tools/alley/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(alley
 llvm_map_components_to_libnames(alley_llvm_libs
   core option executionengine bitwriter x86codegen x86asmparser x86asmprinter mcjit)
 target_link_libraries(alley liball StaticCodeGen ${alley_llvm_libs})
+add_definitions(${LLVM_DEFINITIONS})
