--- a/tools/alltogether/CMakeLists.txt
+++ b/tools/alltogether/CMakeLists.txt
@@ -5,3 +5,4 @@ add_executable(alltogether
 target_link_libraries(alltogether liball)
 llvm_map_components_to_libnames(alltogether_llvm_libs all)
 target_link_libraries(alltogether ${alltogether_llvm_libs})
+add_definitions(${LLVM_DEFINITIONS})
