--- a/libs/wllvm/CMakeLists.txt
+++ b/libs/wllvm/CMakeLists.txt
@@ -4,3 +4,4 @@ add_library(wllvm
 )
 llvm_map_components_to_libnames(libwllvm_llvm_libs core bitwriter object irreader linker)
 target_link_libraries(wllvm ${libwllvm_llvm_libs})
+add_definitions(${LLVM_DEFINITIONS})
