--- a/tools/wllvm/CMakeLists.txt
+++ b/tools/wllvm/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(wllvm-extract
 llvm_map_components_to_libnames(wllvm_llvm_libs core bitwriter object irreader linker)
 target_link_libraries(wllvm-dump wllvm ${wllvm_llvm_libs})
 target_link_libraries(wllvm-extract liball wllvm ${wllvm_llvm_libs})
+add_definitions(${LLVM_DEFINITIONS})
