CMake: add -Wall

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project (ALLVM)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+add_definitions(-Wall)
 
 find_package(LLVM 4.0.0 REQUIRED CONFIG)
 list(APPEND CMAKE_CXX_FLAGS -fno-rtti) # TODO: what if someone builds llvm with RTTI enabled?
@@ -15,5 +16,3 @@ include_directories ("${PROJECT_SOURCE_DIR}/include")
 
 add_subdirectory (libs)
 add_subdirectory (tools)
-
-# TODO: -Wall
