cmake: LLVM-ification part 1.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,16 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 add_definitions(-Wall)
 
 find_package(LLVM 4.0.0 REQUIRED CONFIG)
+list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
+include(AddLLVM)
+include(HandleLLVMOptions)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(LLVM_BUILD_TOOLS ON)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
-if(NOT LLVM_CONFIG_HAS_RTTI)
-  list(APPEND CMAKE_CXX_FLAGS -fno-rtti)
-endif()
 link_directories(${LLVM_LIBRARY_DIR})
 include_directories(${LLVM_INCLUDE_DIR})
 
