--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(alley)
 add_subdirectory(alltogether)
-add_subdirectory(wllvm)
+add_subdirectory(wllvm-extract)
+add_subdirectory(wllvm-dump)
 
 add_custom_target(bc2allvm ALL)
 add_custom_command(
