cmake: make tools using LLVM macros, support installation.

--- a/tools/alley/CMakeLists.txt
+++ b/tools/alley/CMakeLists.txt
@@ -1,11 +1,18 @@
-add_llvm_executable(alley
+set(LLVM_LINK_COMPONENTS
+  ${LLVM_TARGETS_TO_BUILD}
+  BitWriter
+  Core
+  ExecutionEngine
+  MCJIT
+  Option
+)
+
+add_llvm_tool(alley
   ExecutorMain.cpp
   ImageExecutor.cpp
   HostedImageExecutor.cpp
   ImageCache.cpp
 )
+target_link_libraries(alley liball StaticCodeGen)
 
-llvm_map_components_to_libnames(alley_llvm_libs
-  core option executionengine bitwriter x86codegen x86asmparser x86asmprinter mcjit)
-target_link_libraries(alley liball StaticCodeGen ${alley_llvm_libs})
 add_definitions(${LLVM_DEFINITIONS})
