--- a/tools/alltogether/CMakeLists.txt
+++ b/tools/alltogether/CMakeLists.txt
@@ -1,8 +1,10 @@
-add_llvm_executable(alltogether
-  alltogether.cpp
+set(LLVM_LINK_COMPONENTS
+  all # FIXME
 )
 
+add_llvm_tool(alltogether
+  alltogether.cpp
+)
 target_link_libraries(alltogether liball)
-llvm_map_components_to_libnames(alltogether_llvm_libs all)
-target_link_libraries(alltogether ${alltogether_llvm_libs})
+
 add_definitions(${LLVM_DEFINITIONS})
