--- a/tools/wllvm-extract/CMakeLists.txt
+++ b/tools/wllvm-extract/CMakeLists.txt
@@ -1,7 +1,14 @@
-add_llvm_executable(wllvm-extract
-  wllvm-extract.cpp
+set(LLVM_LINK_COMPONENTS
+  BitWriter
+  Core
+  IRReader
+  Linker
+  Object
 )
 
-llvm_map_components_to_libnames(wllvm_llvm_libs core bitwriter object irreader linker)
-target_link_libraries(wllvm-extract liball wllvm ${wllvm_llvm_libs})
+add_llvm_tool(wllvm-extract
+  wllvm-extract.cpp
+)
+target_link_libraries(wllvm-extract liball wllvm)
+
 add_definitions(${LLVM_DEFINITIONS})
