cmake: Finish fixing missed deps, shared lib build now works I think.

--- a/libs/all/CMakeLists.txt
+++ b/libs/all/CMakeLists.txt
@@ -1,6 +1,11 @@
+set(LLVM_LINK_COMPONENTS
+  Core
+  BitWriter
+  IRReader
+)
 # Normally the target would be named "all", but that's reserved by CMake (for
 # the default "make all" target). So we name the target "liball" and set the
 # actual output name to "all".
 llvm_add_library(liball Allexe.cpp
   OUTPUT_NAME all
-  LINK_LIBS archive-rw)
+  LINK_LIBS PUBLIC archive-rw)
