--- a/libs/StaticCodeGen/CMakeLists.txt
+++ b/libs/StaticCodeGen/CMakeLists.txt
@@ -1,6 +1,20 @@
 set(LLVM_LINK_COMPONENTS
-  all
+  ${LLVM_TARGETS_TO_BUILD}
+  Analysis
+  AsmPrinter
+  CodeGen
+  Core
+  IRReader
+  MC
+  MIRParser
+  ScalarOpts
+  SelectionDAG
+  Support
+  Target
+  TransformUtils
 )
+
 llvm_add_library(StaticCodeGen
   StaticCodeGen.cpp
+  LINK_LIBS liball
 )
