cmake: Install all libs, they're needed if building shared.

--- a/libs/StaticCodeGen/CMakeLists.txt
+++ b/libs/StaticCodeGen/CMakeLists.txt
@@ -14,7 +14,7 @@ set(LLVM_LINK_COMPONENTS
   TransformUtils
 )
 
-llvm_add_library(StaticCodeGen
+add_llvm_library(StaticCodeGen
   StaticCodeGen.cpp
   LINK_LIBS liball
 )
