--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,6 @@ include_directories ("${PROJECT_SOURCE_DIR}/include")
 
 add_subdirectory (libs)
 add_subdirectory (tools)
+add_subdirectory (test)
 
 include(CheckFormat.cmake)
