Add another very simple test, this time targetting bc2allvm

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ list(APPEND ALLVM_TEST_DEPENDS
   wllvm-dump
   alley
   alltogether
+  bc2allvm
 )
 set(ALLVM_TEST_PARAMS
   allvm_site_config=${CMAKE_CURRENT_BINARY_DIR}/lit.site.cfg
