cmake/lit: Add missing dep on libnone! O:)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ list(APPEND ALLVM_TEST_DEPENDS
   alley
   alltogether
   bc2allvm
+  none
 )
 set(ALLVM_TEST_PARAMS
   allvm_site_config=${CMAKE_CURRENT_BINARY_DIR}/lit.site.cfg
