libnone: build into /lib like other libs.
Fixes execution of alley before installation.

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -29,11 +29,12 @@ set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${MUSL}")
 # Compile our little libunwind bits into a library, then merge in musl's libc.a.
 add_library(none STATIC UnwindRegistersRestore.S UnwindRegistersSave.S)
 install(TARGETS none DESTINATION lib)
+set_output_directory(none BINARY_DIR ${LLVM_RUNTIME_OUTPUT_INTDIR} LIBRARY_DIR ${LLVM_LIBRARY_OUTPUT_INTDIR})
 add_dependencies(none musl)
 # http://stackoverflow.com/questions/3821916/how-to-merge-two-ar-static-libraries-into-one
 configure_file(merge.ar merge.ar)
 add_custom_command(TARGET none POST_BUILD
   COMMAND ar -M <merge.ar
-  COMMAND mv libnone.a.merged libnone.a
+  COMMAND mv libnone.a.merged ${LLVM_LIBRARY_OUTPUT_INTDIR}/libnone.a
   DEPENDS merge.ar
 )
