--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -8,7 +8,7 @@ add_custom_command(
   TARGET bc2allvm POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy
           ${CMAKE_CURRENT_SOURCE_DIR}/bc2allvm
-          ${CMAKE_CURRENT_BINARY_DIR}/bc2allvm
+          ${LLVM_RUNTIME_OUTPUT_INTDIR}/bc2allvm
 )
 install(PROGRAMS bc2allvm DESTINATION bin)
-set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES bc2allvm)
+set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES ${LLVM_RUNTIME_OUTPUT_INTDIR}/bc2allvm)
