cmake, libnone: Only apply mcmodel/fpic patch if building with clang.
This fixes the build with libnone when building using:
  clang 4.0.0
  gcc 4.9.4
  gcc 5.4.0
  gcc 6.2.0

We'll see if this breaks things for anyone else,
fingers crossed :).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.4)
 
-project (ALLVM)
+project (ALLVM CXX C)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
