lit.site.cfg.in: Don't set LD_LIBRARY_PATH, might cause problems.

--- a/test/lit.site.cfg.in
+++ b/test/lit.site.cfg.in
@@ -18,7 +18,7 @@ if curpath:
     newpath += ":" + curpath
 config.environment['PATH'] = newpath
 
-libpath = os.environ.get('LD_LIBRARY_PATH', '')
-if libpath:
-    libpath = ":" + libpath
-config.environment['LD_LIBRARY_PATH'] = "@OBJDIR@/prefix/lib" + libpath
+#libpath = os.environ.get('LD_LIBRARY_PATH', '')
+#if libpath:
+#    libpath = ":" + libpath
+#config.environment['LD_LIBRARY_PATH'] = "@OBJDIR@/prefix/lib" + libpath
