cmake: Check if 'FileCheck' is available and offer help if it is not.
We want to detect this early instead of erroring out during testing.

See comments on !22 for more information.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,17 @@ if (NOT LIT_COMMAND)
   set(LIT_COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/utils/lit/lit.py)
 endif()
 
+# Check we have FileCheck utility, as indicator of the LLVM utilities.
+find_program(FILECHECK_PATH FileCheck HINTS ${LLVM_TOOLS_BINARY_DIR})
+if (NOT FILECHECK_PATH)
+  message(STATUS "LLVM Tools path: ${LLVM_TOOLS_BINARY_DIR}")
+  message(FATAL_ERROR "
+     Unable to find required 'FileCheck' utility.
+     Check that LLVM_INSTALL_UTILS was enabled when you built LLVM.")
+else()
+  message(STATUS "Found FileCheck: ${FILECHECK_PATH}")
+endif()
+
 add_lit_testsuite(check "Running ALLVM regression tests"
   ${CMAKE_CURRENT_BINARY_DIR}
   PARAMS ${ALLVM_TEST_PARAMS}
