Fix musl's detection of unsupported (ignored) flags, much quieter now.

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -7,6 +7,7 @@ set(MUSL_PATCHES
   musl-patches/0003-Remove-simple-malloc-gets-in-way-of-real-malloc.patch
   musl-patches/0004-KLUDGE-More-workaround-weak-alias-this-time-tackling.patch
   musl-patches/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
+  musl-patches/0006-configure-improve-tryflag-to-reject-ignored-opt-argu.patch
 )
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
