--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -18,17 +18,17 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   # Don't complain about 'unused' arguments
   # This happens when building assembly files using same CFLAGS used for C files,
   # lots of them don't make any sense for assembly code so they go unused.
-  set(CFLAGS_QUNUSED -Qunused-arguments)
+  set(CFLAGS_QUNUSED "-Qunused-arguments")
 endif()
 
-set(MUSL_CFLAGS -O2 -pipe -fPIC ${CFLAGS_QUNUSED} CACHE string "CFLAGS for building musl")
+set(MUSL_CFLAGS "-O2 -pipe -fPIC ${CFLAGS_QUNUSED}" CACHE string "CFLAGS for building musl")
 
 
 add_custom_command(OUTPUT ${MUSL}/config.mak
   COMMAND rm -rf "${MUSL}"
   COMMAND tar xf "${CMAKE_CURRENT_SOURCE_DIR}/${MUSL}.tar.gz"
   COMMAND for PATCH in ${MUSL_PATCHES} \; do patch -p1 -d "${MUSL}" -i "${CMAKE_CURRENT_SOURCE_DIR}/$$PATCH" \; done
-  COMMAND cd ${MUSL} && CC=${CMAKE_C_COMPILER} ./configure --disable-shared CFLAGS="${MUSL_CFLAGS}"
+  COMMAND cd ${MUSL} && CC=${CMAKE_C_COMPILER} ./configure --disable-shared CFLAGS=${MUSL_CFLAGS}
   MAIN_DEPENDENCY ${MUSL}.tar.gz
   DEPENDS ${MUSL_PATCHES}
   COMMENT "Configuring ${MUSL}"
