Add -lrt for linking.

--- a/tools/alley/CMakeLists.txt
+++ b/tools/alley/CMakeLists.txt
@@ -1,10 +1,15 @@
 set(LLVM_LINK_COMPONENTS
   ${LLVM_TARGETS_TO_BUILD}
+  BitReader
   BitWriter
   Core
   ExecutionEngine
+  MC
   MCJIT
+  MCParser
+  Object
   Option
+  Support
 )
 
 add_llvm_tool(alley
@@ -15,5 +20,6 @@ add_llvm_tool(alley
   StaticBinaryCache.cpp
 )
 target_link_libraries(alley liball StaticCodeGen)
+target_link_libraries(alley rt)
 
 add_definitions(${LLVM_DEFINITIONS})
