--- a/tools/wllvm-extract/CMakeLists.txt
+++ b/tools/wllvm-extract/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(LLVM_LINK_COMPONENTS
+  BitReader
   BitWriter
   Core
   IRReader
   Linker
   Object
+  Support
 )
 
 add_llvm_tool(wllvm-extract
