alley: Refactor static code path to separate file.

--- a/tools/alley/CMakeLists.txt
+++ b/tools/alley/CMakeLists.txt
@@ -18,6 +18,7 @@ add_llvm_tool(alley
   ImageCache.cpp
   ImageExecutor.cpp
   StaticBinaryCache.cpp
+  Static.cpp
 )
 target_link_libraries(alley liball StaticCodeGen)
 target_link_libraries(alley rt)
