And move JIT execution path to new "JIT.cpp".

--- a/tools/alley/CMakeLists.txt
+++ b/tools/alley/CMakeLists.txt
@@ -15,6 +15,7 @@ set(LLVM_LINK_COMPONENTS
 add_llvm_tool(alley
   alley.cpp
   HostedImageExecutor.cpp
+  JIT.cpp
   ImageCache.cpp
   ImageExecutor.cpp
   StaticBinaryCache.cpp
