rename ImageCache -> JITCache

--- a/tools/alley/CMakeLists.txt
+++ b/tools/alley/CMakeLists.txt
@@ -16,7 +16,7 @@ add_llvm_tool(alley
   alley.cpp
   HostedImageExecutor.cpp
   JIT.cpp
-  ImageCache.cpp
+  JITCache.cpp
   ImageExecutor.cpp
   StaticBinaryCache.cpp
   Static.cpp
