alley: More refactoring, drop ImageExecutor, isolate linux-specific.
Also, update-format.

--- a/tools/alley/CMakeLists.txt
+++ b/tools/alley/CMakeLists.txt
@@ -14,10 +14,9 @@ set(LLVM_LINK_COMPONENTS
 
 add_llvm_tool(alley
   alley.cpp
-  HostedImageExecutor.cpp
-  JITExecutionYengine.cpp
   JITCache.cpp
-  ImageExecutor.cpp
+  JITExecutionYengine.cpp
+  LinuxJIT.cpp # select this based on platform
   StaticBinaryCache.cpp
   StaticExecutionYengine.cpp
 )
