Refactor alley into two libs: ExecutionYengine and Cache.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ include(HandleLLVMOptions)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(LLVM_BUILD_TOOLS ON)
 
+find_package( ZLIB REQUIRED )
+
 option(USE_CLANG_WERROR_FLAGS OFF)
 
 if (USE_CLANG_WERROR_FLAGS)
