--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,5 +1,7 @@
-add_subdirectory (archive-rw)
-add_subdirectory (none)
 add_subdirectory (all)
+add_subdirectory (archive-rw)
+add_subdirectory (Cache)
+add_subdirectory (none)
+add_subdirectory (ExecutionYengine)
 add_subdirectory (StaticCodeGen)
 add_subdirectory (wllvm)
