Add first impl of 'allready', uses 'noexec' static code path.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(alley)
+add_subdirectory(allready)
 add_subdirectory(alltogether)
 add_subdirectory(bc2allvm)
 add_subdirectory(wllvm-dump)
