Refactor AOTCompile to it's own library to avoid dep cycle.
AOTCompile -> Cache -> CodeGen
    \-------------------^

In the future would like to break cache's dep on codegen
(especially if it ends up including bits of LLD functionality!)
so tools can use/query the cache without needing codegen bits.

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory (all)
+add_subdirectory (AOTCompile)
 add_subdirectory (archive-rw)
 add_subdirectory (Cache)
 add_subdirectory (none)
