Replace ResourceLocations.h with new ALLVMContext class.
Requires tools to pass in a symbol from the main executable,
in order to work across platforms.

Closes #45.

(And hopefully fixes FreeBSD assertion failures in tools)

--- a/tools/allready/CMakeLists.txt
+++ b/tools/allready/CMakeLists.txt
@@ -16,6 +16,6 @@ set(LLVM_LINK_COMPONENTS
 add_llvm_tool(allready
   allready.cpp
 )
-target_link_libraries(allready liball AOTCompile Cache ExecutionYengine)
+target_link_libraries(allready liball AOTCompile Cache Context ExecutionYengine)
 
 add_definitions(${LLVM_DEFINITIONS})
