--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory (all)
 add_subdirectory (AOTCompile)
 add_subdirectory (archive-rw)
 add_subdirectory (Cache)
+add_subdirectory (Context)
 add_subdirectory (none)
 add_subdirectory (ExecutionYengine)
 add_subdirectory (StaticCodeGen)
