--- a/tools/bc2allvm/CMakeLists.txt
+++ b/tools/bc2allvm/CMakeLists.txt
@@ -8,6 +8,6 @@ set(LLVM_LINK_COMPONENTS
 add_llvm_tool(bc2allvm
   bc2allvm.cpp
 )
-target_link_libraries(bc2allvm liball)
+target_link_libraries(bc2allvm liball Context)
 
 add_definitions(${LLVM_DEFINITIONS})
