Move "CheckFormat" to new 'cmake' subdir. NFCI.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 include(AddLLVM)
 include(HandleLLVMOptions)
 
@@ -46,4 +47,4 @@ add_subdirectory (libs)
 add_subdirectory (tools)
 add_subdirectory (test)
 
-include(CheckFormat.cmake)
+include(CheckFormat)
