--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(alltogether)
 add_subdirectory(bc2allvm)
 add_subdirectory(wllvm-dump)
 add_subdirectory(wllvm-extract)
+add_subdirectory(all-info)
