Added interface for ALLVM Linker
Added two implemtations (Driver found in PATH and LLD which is the
default). For now the LLD linker is not functional.

--- a/libs/StaticCodeGen/CMakeLists.txt
+++ b/libs/StaticCodeGen/CMakeLists.txt
@@ -16,7 +16,10 @@ set(LLVM_LINK_COMPONENTS
 
 add_llvm_library(StaticCodeGen
   StaticCodeGen.cpp
-  LINK_LIBS liball
+  ALLVMLinker.cpp
+  LINK_LIBS
+    liball
+    lldELF
 )
 
 add_definitions(${LLVM_DEFINITIONS})
