Added alld linker tool.
Added a new tool called alld, that is an allvm wrapper for the lld
linker. Also revised the strategy for chosing which linker to use
in the AOT compilation path: When lld has been built with LLVM the
out alld wrapper is getting built and is used as the default linker.
Else, the ld linker found in the PATH is used as the default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,15 @@ if (USE_CLANG_WERROR_FLAGS)
   list(APPEND LLVM_DEFINITIONS ${WARNING_FLAGS} -Werror)
 endif()
 
+find_library(LLD_AVAILABLE_AS_LIB lldELF)
+if ( LLD_AVAILABLE_AS_LIB )
+  add_definitions(-DALLVM_alld_available)
+else()
+  message(WARNING
+"lld was not built with found LLVM. "
+"The internal linker (alld) will not be built.")
+endif()
+
 # Put libs and bins in expected place.
 # XXX: We don't setup CMAKE_CFG_INTDIR to distinguish Release/Debug/etc.
 set(LLVM_RUNTIME_OUTPUT_INTDIR
